base-installer (1.26) UNRELEASED; urgency=low

  * All ads* subarches collapsed into one.

 -- Joey Hess <joeyh@debian.org>  Thu, 18 Aug 2005 10:04:03 -0400

base-installer (1.25) unstable; urgency=low

  [ Colin Watson ]
  * Make failed-initrd-tools-install template a little more generic, for
    future expansion (e.g. initramfs-tools).

  [ Sven Luther ]
  * Upgraded powerpc kernel choser to handle powerpc64 case, 2.6.12 kernels
    and the linux-image* rename. I guess we should support pseudo packages
    now, and the current code breaks because abi-names where introduced.
    Since we are no longer supporting 2.4 powerpc kernels, this should go
    also.

  [ Joey Hess ]
  * Remove unused base-installer/kernel/no-kernel template.
  * Support installing no kernel at all if the user doesn't want one.
    Closes: #304802, #247765
  * Support ADS arm boards by installing no kernel, since no usable kernel is
    in Debian for them yet.
  * Add a test case for an ADS VGX board.
  * Update test suite to not fail powerpc after Sven's changes above.

  * Updated translations: 
    - Danish (da.po) by Claus Hindsgaul
    - French (fr.po) by Christian Perrier
    - Italian (it.po) by Stefano Canepa
    - Japanese (ja.po) by Kenshi Muto
    - Bokmål, Norwegian (nb.po) by Bjørn Steensrud
    - Portuguese (pt.po) by Miguel Figueiredo
    - Vietnamese (vi.po) by Clytie Siddall

 -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 13:05:16 -0400

base-installer (1.24) unstable; urgency=low

  * Turn link_in_boot on for both i386 and amd64. They should be the same,
    and Kamion points out turning it off for amd64 is a regression.

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Aug 2005 16:41:30 -0400

base-installer (1.23) unstable; urgency=low

  * Avoid using dmesg to guess if the machine is smp on alpha, amd64, and
    i386, since the ring buffer can overflow. Instead, use the new numcpus
    file written by rootskel on these three architectures.
    Closes: #228252, #247371