@@ -1,9 +1,10 @@
-subarch adsvgx
+subarch ads
 cpuinfo adsvgx.cpuinfo
 majors 2.4
-flavour none
-kernel-2.4 none
-usable
+flavour ads
+kernel-2.4 kernel-image-2.4.27-ads
+usable \
+  kernel-image-2.4.27-ads
 unusable \
   kernel-image-2.4.25-bast \
   kernel-image-2.4.25-lart \
