@@ -1,8 +1,10 @@
 base-installer (1.26) UNRELEASED; urgency=low
 
   * All ads* subarches collapsed into one.
+  * If there is no usable kernel found, allow the user to choose to continue
+    w/o installing a kernel.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 18 Aug 2005 10:04:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 18 Aug 2005 10:44:13 -0400
 
 base-installer (1.25) unstable; urgency=low
 
